# ckanext-googleanalytics

./: .gitignore  .hgignore  AUTHORS  CHANGELOG.md  MANIFEST.in  README.md  README.rst  README.txt  dev-requirements-2.9.txt  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/: __init__.py
ckanext/dge_ga/: __init__.py  plugin.py
ckanext/dge_ga/assets/: webassets.yml
ckanext/dge_ga/assets/js/: dge-seo-events.js  dge-seo-events.min.js  dge-seo-pages.js  dge-seo-pages.min.js  dge_ga_event_tracking.js
ckanext/dge_ga/fanstatic_library/: dge-seo-events.js  dge-seo-events.min.js  dge-seo-pages.js  dge-seo-pages.min.js  dge_ga_event_tracking.js
ckanext/dge_ga/templates/: base.html
ckanext/dge_ga/templates/googleanalytics/snippets/: dge_ga_header.html
ckanext/googleanalytics/: __init__.py  cli.py  commands.py  config.py  config_declaration.yaml  controller.py  dbutil.py  ga_auth.py  gasnippet.py  helpers.py  interfaces.py  plugin.py  utils.py  views.py
ckanext/googleanalytics/assets/: googleanalytics_event_tracking.js  webassets.yml
ckanext/googleanalytics/fanstatic_library/: googleanalytics_event_tracking.js
ckanext/googleanalytics/logic/: action.py  auth.py  schema.py
ckanext/googleanalytics/migration/googleanalytics/: alembic.ini  env.py
ckanext/googleanalytics/migration/googleanalytics/versions/: b74febeb899b_create_stats_tables.py
ckanext/googleanalytics/model/: __init__.py  base.py
ckanext/googleanalytics/plugin/: __init__.py  flask_plugin.py  paster_plugin.py  pylons_plugin.py
ckanext/googleanalytics/public/scripts/: ckanext-googleanalytics.js
ckanext/googleanalytics/templates/: base.html  index.html  layout.html  page.html  summary.html
ckanext/googleanalytics/templates/googleanalytics/snippets/: _ga.html  _gtag.html  _gtm.html  event_tracking_asset.html  event_tracking_resource.html  googleanalytics_footer.html  googleanalytics_header.html
ckanext/googleanalytics/tests/: conftest.py  test_config.py  test_plugin.py  test_view.py
ckanext/googleanalytics/tests/logic/: test_action.py
tests/: accountsfixture.xml  mockgoogleanalytics.py  packagefixture.xml  test_general.py
