[metadata]
name = ckanext-googleanalytics
version = 2.4.0
description = Add GA tracking and reporting to CKAN instance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckan/ckanext-googleanalytics
author = Seb Bacon
author_email = seb.bacon@gmail.com
license = AGPL
classifiers =
	    Development Status :: 4 - Beta
	    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
	    Programming Language :: Python :: 3.11
	    Programming Language :: Python :: 3.12
keywords =
	 CKAN

[options]
python_requires = >= 3.7
install_requires =
                 ckantoolkit
                 google-api-python-client

packages = find:
namespace_packages = ckanext
include_package_data = True

[options.extras_require]
requirements =
             gdata>=2.0.0
             google-api-python-client>=1.6.1, <1.7.0
             pyOpenSSL>=16.2.0
             rsa>=3.1.4, <=4.0

[options.entry_points]
ckan.plugins =
             googleanalytics = ckanext.googleanalytics.plugin:GoogleAnalyticsPlugin

paste.paster_command =
                     loadanalytics = ckanext.googleanalytics.commands:LoadAnalytics
                     initdb = ckanext.googleanalytics.commands:InitDB

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan
[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/googleanalytics/i18n/ckanext-googleanalytics.pot
width = 80

[init_catalog]
domain = ckanext-googleanalytics
input_file = ckanext/googleanalytics/i18n/ckanext-googleanalytics.pot
output_dir = ckanext/googleanalytics/i18n

[update_catalog]
domain = ckanext-googleanalytics
input_file = ckanext/googleanalytics/i18n/ckanext-googleanalytics.pot
output_dir = ckanext/googleanalytics/i18n
previous = true

[compile_catalog]
domain = ckanext-googleanalytics
directory = ckanext/googleanalytics/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning

addopts = --ckan-ini test.ini
